--- a/style.css
+++ b/style.css
@@ -242,6 +242,7 @@ header{
       width: 100%;
       height: 100%;
       background: rgba(0, 0, 0, 0.5);
+      padding: 0px 50px ;
   }
   label{
     color: #62e9b0;
