--- a/style.css
+++ b/style.css
@@ -383,7 +383,8 @@ footer {
   @media screen and (max-width: 450px) {
 
     #biopic {
-        height: 350px;
+        width: 100%;
+        height: auto
     }
     #name{
         color: #feddb2;
