--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ header{
       padding: 0px 20px ;
   }
   label{
-    color: #62e9b0;
+    color: #ffffff;
   }
   .emailMe{
     background: url(./images/EmailBG.jpg);
