--- a/style.css
+++ b/style.css
@@ -385,8 +385,8 @@ footer {
   @media screen and (max-width: 450px) {
 
     #biopic {
-        width: 100%;
-        height: auto;
+        /* width: 100%; */
+        height: 50vh;
     }
     #name{
         color: #feddb2;
